--- a/web/Rails/app/views/layouts/application(helper).html.erb
+++ b/web/Rails/app/views/layouts/application(helper).html.erb
@@ -1,7 +1,5 @@
 <!--                      Лэйаут для демонстрации хэлперов для меню и второстепенных yield -->
 
-<!--  (helper) - в названии фаила просто для отличия, чтоб сделать не захламленную копию лэйаут -->
-
 <!DOCTYPE html>
 <html lang="<%= I18n.locale %>">
   <head>
@@ -11,9 +9,9 @@
 
     <!-- Интегрируем в тайтл значение возвращаемое хэлпером, с названием и сайта и конкретной страницы -->
     <title><%= full_title(yield(:page_title)) %></title>
-    <!-- full_title - название/оператор нашего хэлпера -->
+    <!-- full_title - оператор нашего хэлпера -->
     <!-- yield(:page_title) - дополнительный, не главный yield, с условием(content_for) который принимает только из provide с тем же параметром -->
-    <!-- :page_title - content_for/название(можно любое)для конкретного yield -->
+    <!-- :page_title - content_for/название(можно любое) для конкретного yield -->
     <!-- Теперь из вида(например questions/index.html.erb), что подставлен в данный момент уже в главный yield из provide :page_title передастся в этот yield значение, определив его по имени :page_title и далее значение отправляется в хэлпер, обрабатывается и подставляется в название вкладки(тут 'Questions | AskIt') -->
 
 
@@ -38,6 +36,7 @@
 
       <%= yield %>
     </main>
+
   </body>
 </html>
 
