--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <!--                          Хэлпер для названия вкладки с названием страницы -->
 
-<!-- Данную конструкцию с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке -->
+<!-- Эту конструкцию, но с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке -->
 <% provide :page_title, 'Questions' %>
 <!-- provide  - встроенный хэлпер передающий значение(тут 'Questions') для конкретного yield с именем :page_title -->
 
@@ -86,7 +86,7 @@
 
 <h1 class="mb-4"><%= t('.title') %></h1>
 
-<!-- форма для выбора отображения вопросов по тегам (ManyToMany) -->
+<!--            (ManyToMany) форма для выбора отображения вопросов по тегам  -->
 <%= form_with url: questions_path, method: :get do |f| %>
   <!-- url: questions_path  - тоесть на эту же страницу -->
   <!-- method: :get - тоесть передаем методом GET (будем отправлять форму в index) -->
