--- a/web/Rails/app/views/answers/_form.html.erb
+++ b/web/Rails/app/views/answers/_form.html.erb
@@ -2,15 +2,10 @@
 <!-- Паршал в паршале: подключаем паршал ошибок прямо в паршал формы -->
 
 <%= form_with model: [@question, @answer] do |f| %>
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
-    </div>
-
-    <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control', required: true %>
-      <!-- required: true - доп валидация на стороне формы(поле не должно быть пустым) -->
-    </div>
+  <div>
+    <%= f.label :body %>
+    <%= f.text_area :body, class: 'form-control', required: true %>
+    <!-- required: true - доп валидация на стороне формы(поле не должно быть пустым) -->
   </div>
 
   <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
