--- a/web/Rails/app/views/comments/_commentable.html.erb
+++ b/web/Rails/app/views/comments/_commentable.html.erb
@@ -1,5 +1,7 @@
 <!--                                         Стартовый вариант -->
 
+<!-- Этот паршал будет рендериться для кажого вопроса и ответа на странице questions/show.html.erb -->
+
 <!-- Ссылка с якорем для открытия конкретного collapse элемента на странице -->
 <%= link_to t('questions.show.comments'), "##{html_id}", class: 'btn btn-primary', data: {'bs-toggle': 'collapse'} %>
 <!-- html_id - значение якоря будем передавать из questions/show.html.erb и answers/_answer.html.erb в точке рендера -->
@@ -37,7 +39,7 @@
 <!-- #{'show' if is_current_comment} - добавляем класс бутстрапа открывающий коллапс объект для нужного блока -->
 
   <%= form_with model: [commentable, (is_current_comment ? comment : commentable.comments.build)] do |f| %>
-  <!-- В URL используем comment, если это тот блок в который передается ошмбка (тоесть это значит что валидация не прошла) и форма подсветится красным(обводки полей) или билд новой сущьности для остальных блоков -->
+  <!-- В URL используем comment, если это тот блок в который передается ошибка (тоесть это значит что валидация не прошла) и форма подсветится красным(обводки полей) или билд новой сущьности для остальных блоков -->
 
     <!-- тоесть теперь мы вызываем отображение ошибок только для нужного блока -->
     <% if is_current_comment %>
