--- a/web/Rails/app/views/questions/_form.html.erb
+++ b/web/Rails/app/views/questions/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.label :tags %>
     <%= f.collection_select :tag_ids, tags, :id, :title, {}, multiple: true %>
     <!-- collection_select - хэлпер селектора, который может принимать коллекцию сущностей и подставлять ее свойства -->
-    <!-- :tag_ids - название поля -->
+    <!-- :tag_ids - название(name) поля (для params) -->
     <!-- tags - коллекция всех тегов которую сюда передаем из questions/new.html.erb или questions/edit.html.erb -->
     <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
     <!-- :title - метод(модели) который нужно применять к сущности из коллекции tags при отображении лэйблов(названий тегов) на странице в пунктах селектора -->
