--- a/web/Rails/app/views/answers/_answer.html.erb
+++ b/web/Rails/app/views/answers/_answer.html.erb
@@ -33,40 +33,37 @@
 <!--                                    Версия 2: с хэлперами и комментами -->
 
 <%= tag.article class: 'my-3 card border-0 border-top', id: dom_id(answer) do %>
-  <div class="row g-0">
-    <div class="col-sm-auto text-sm-center align-self-center">
-      <%= answer.user.gravatar size: 50, css_class: 'd-block' %>
-      <%= answer.user.name_or_email %>
-    </div>
-    <div class="col-sm">
-      <div class="card-body">
-        <section class="card-text mb-3">
-          <div class="col-sm-9">
-            <small><time datetime="<%= answer.formatted_created_at %>">
-              <%= answer.formatted_created_at %>
-            </time></small>
 
-            <div class="mt-2">
-              <%= sanitize answer.body %>
-            </div>
-          </div>
-        </section>
-
-        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
-        <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
-          data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
-
-        <!-- Вариант тех же кнопок со скрытием для пользователей бнз соотв доступа (UsersRoles) -->
-        <% if policy(answer).edit? %>
-          <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
-        <% end %>
-        <% if policy(answer).destroy? %>
-          <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
-            data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
-        <% end %>
-      </div>
-    </div>
+  <div>
+    <%= answer.user.gravatar size: 50, css_class: 'd-block' %>
+    <%= answer.user.name_or_email %>
   </div>
+
+  <div class="card-body">
+    <section class="card-text">
+      <time datetime="<%= answer.formatted_created_at %>">
+        <%= answer.formatted_created_at %>
+      </time>
+
+      <div class="mt-2">
+        <%= sanitize answer.body %>
+      </div>
+    </section>
+
+    <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
+    <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
+      data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+
+    <!-- Вариант тех же кнопок со скрытием для пользователей бнз соотв доступа (UsersRoles) -->
+    <% if policy(answer).edit? %>
+      <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
+    <% end %>
+    <% if policy(answer).destroy? %>
+      <%= link_to t('global.button.delete'), question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
+        data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+    <% end %>
+  </div>
+
 <% end %>
 
 <!-- Рендерим паршал формы комментариев (Polym_assoc) -->
