--- a/web/Rails/app/views/password_resets/new.html.erb
+++ b/web/Rails/app/views/password_resets/new.html.erb
@@ -8,8 +8,8 @@
 <%= form_with url: password_reset_path do |f| %>
 
   <%= f.label :email, t('.form.email') %>
-  <%= f.email_field :email, value: params[:email], class: 'form-control form-control-lg', required: true %>
-  <!-- required: true  - чтобы пользователь не забыл ввести пароль в поле -->
+  <%= f.email_field :email, value: params[:email], class: 'form-control', required: true %>
+  <!-- required: true  - чтобы пользователь не забыл ввести имэил в поле -->
 
   <%= f.submit t('.form.submit'), class: 'btn btn-primary btn-lg' %>
   <%= link_to t('.form.back'), new_session_path, class: 'btn btn-secondary' %> <!-- Просто возврат к форме логина, если вспомнил свой пароль например -->
