--- a/web/Rails/app/views/articles/index.html.erb
+++ b/web/Rails/app/views/articles/index.html.erb
@@ -59,15 +59,12 @@
 
   <!-- Скроем возможности редактирования и удаления от всех кроме автора статьи -->
 
-  <!-- 1. Вариант из примера - сравнивает сущности активного юзера и юзера к которому привязана статья  -->
-  <% if current_user == article.user %> <!-- В примере это делали через написание хэлпера -->
+  <!-- 1. Сравнивает сущности активного юзера и юзера к которому привязана статья  -->
+  <% if current_user == article.user %> <!-- Сработает так же как current_user.id == article.user_id. Можно вынести в хэлпер  -->
     <!-- article.user - возвращает объект юзера которому принадлежит статья, как было с comments только наоборот -->
     <p><%= link_to "Edit article", edit_article_path(article) %></p>
     <p><%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
   <% end %>
-
-  <!-- 2. Мой вариант изначальный с обращением к столбцам -->
-  <% if current_user.id == article.user_id %>
 
   <hr>
 <% end %>
