--- a/web/Rails/app/views/pages/index.html.erb
+++ b/web/Rails/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<% currently_at t('menu.home') %> <!-- t('menu.home') - переводы для активного пункта меню, подставит значение из соотв каталога -->
-<% provide :page_title, t('.title') %> <!-- переводы для  -->
+<% currently_at t('menu.home') %> <!-- t('menu.home') - переводы для активного пункта меню, подставит значение из соответсвующего каталога -->
+<% provide :page_title, t('.title') %> <!-- переводы для заголовка pages.index.title -->
 
 <h1><%= t '.title' %></h1> <!-- переводы для заголовка pages.index.title -->
