--- a/web/Rails/app/views/answers(turbo)/_answer.html.erb
+++ b/web/Rails/app/views/answers(turbo)/_answer.html.erb
@@ -10,14 +10,11 @@
         <time datetime="<%= answer.formatted_created_at %>">
           <%= answer.formatted_created_at %>
         </time>
-        <div>
-          <%= sanitize answer.body %>
-        </div>
+        <%= sanitize answer.body %>
       </section>
 
       <% if policy(answer).edit? %>
-        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer),
-          class: 'btn btn-info btn-sm' %>
+        <%= link_to t('global.button.edit'), edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
       <% end %>
 
       <% if policy(answer).destroy? %>
@@ -27,11 +24,8 @@
     </div>
   <% end %>
 
-  <!-- Старый варик до пункта 10. "динамическими создание и удаление комментариев" -->
-  <%= render 'comments/commentable', commentable: answer, comment: @comment, html_id: dom_id(answer, 'comment_form') %>
-
-  <!-- Новый варик после пункта 10. "динамическими создание и удаление комментариев" -->
-  <%= render 'comments/commentable', commentable: answer, comment: @comment %>
+  <!-- 10. динамическое создание и удаление комментариев (удаляем html_id: dom_id) -->
+  <%= render 'comments/commentable', commentable: answer, comment: @comment#, html_id: dom_id(answer, 'comment_form') %>
 
 <% end %>
 
