--- a/web/Rails/app/views/questions(turbo)/create.turbo_stream.erb
+++ b/web/Rails/app/views/questions(turbo)/create.turbo_stream.erb
@@ -1,6 +1,6 @@
 <%= turbo_stream.prepend 'questions', render(@question) %> <!-- Тут мы сообщаем куда нужно добавить только что созданный вопрос -->
 <!-- prepend - метод для turbo_stream, который при помощи JS возьмет HTML(отрендереный вопрос) и поместит/добавит его в элемент/турбофрэйм с указанным id -->
 <!-- 'questions' - значение id турбофрэйм-тега в который мы добавляем вопрос -->
-<!-- render(@question) - то что мы тобавляем в турбофрэйм тег, а именно отрендеренный _quesion.html.erb с вопросом из @question -->
+<!-- render(@question) - то что мы добавляем в турбофрэйм тег, а именно отрендеренный _quesion.html.erb с вопросом из @question -->
 
 <%= prepend_flash %> <!-- turbo_stream.prepend 'flash', partial: 'shared/flash' - добавим вызов хэлпера для того чтобы отображать флэш сообщение в блоке лэйаута с соответсвующим айди при использовании турбо-фрэйма -->
