--- a/web/Rails/app/views/questions(turbo)/_question.html.erb
+++ b/web/Rails/app/views/questions(turbo)/_question.html.erb
@@ -1,5 +1,6 @@
 <%= turbo_frame_tag question do %> <!-- Обернем вопрос в турбофрэйм тег -->
   <!-- question - для генерации айдишников будем использовать конкретные вопросы с разными айди, так что и айди турбофрэйм-ткгов будут уникальными -->
+  <!-- Теперь в данном паршале дудет рендерится измененный вопрос из update.turbo_stream.erb или удаляться из destroy.turbo_stream.erb с же айди что и тут -->
 
   <article class="card my-3">
     <section class="card-header">
@@ -15,7 +16,7 @@
         <%= tag.time datetime: question.formatted_created_at do %>
           <small><%= question.formatted_created_at %></small>
         <% end %>
-        <div class="my-2"><%= render question.tags %></div>
+        <div class="my-2"><%= render question.tags %></div> <!-- тут рендарятся теги из tags/_tag.html.erb -->
         <p class="my-2"><%= sanitize question.body %></p>
       </section>
 
