--- a/web/Rails/app/views/questions(turbo)/index.html.erb
+++ b/web/Rails/app/views/questions(turbo)/index.html.erb
@@ -25,11 +25,11 @@
 
   <!-- В итоге мы получим: -->
   <a class="btn btn-primary btn-lg mb-3" data-turbo-frame="new_question" href="/en/questions/new">New question</a>
-  <!-- Турбофрэйм-тег до нажатия кнопки -->
+  <!-- Турбофрэйм-тег до нажатия кнопки: -->
   <turbo-frame id="new_question"></turbo-frame>
   <!-- Турбофрэйм-тег после нажатия кнопки, в который вставился контент из турбофрэйма в паршале questions(turbo)/_form.html.erb, вставилось только то что в теге турбофрэйма там, без кода из new.html.erb -->
   <turbo-frame id="new_question" src="http://localhost:5000/en/questions/new" complete="">
-    <!-- src="http://localhost:5000/en/questions/new" - адрес страницы с которой мы взяли форму. Тоесть ??данный турбофрэйм?? нашел на странице по этому адресу турбофрэйм с таким же айдишником и подставил сюда контент из него -->
+    <!-- src="http://localhost:5000/en/questions/new" - адрес страницы с которой мы взяли форму. Тоесть ссылка сдела запрос на страницу по этому адресу к турбофрэйму с таким же айдишником и контроллер подставил сюда контент из него -->
     <form action="/en/questions" accept-charset="UTF-8" method="post">
       <!-- ... поля формы ... -->
     </form>
