--- a/web/Rails/app/views/articles/index.html.erb
+++ b/web/Rails/app/views/articles/index.html.erb
@@ -22,15 +22,14 @@
 
   <!--                             Ссылка/кнопка на удаление статьи -->
 
-  <!-- В Рэилс 6 была такая например ссылка для удаления, в 7й для такого необходимо подключить UJS -->
+  <!-- В Рэилс 6 была такая ссылка для удаления, в 7й для такого необходимо подключить UJS -->
   <%= link_to "Destroy", article_path(article), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
-  <!-- data: { confirm: 'Действительно удалить?'} - необязательный элемент c окном подтверждения -->
-  <!-- В Рэилс 7 если не отключить хотваир link_to delete-ссылки по умолчанию связаны с js и turbo и отключен UJS. Тоесть ссылка как выше уже не сработает, тк она шлет GET а в turbo нужно чтобы слало метод DELETE, потому вместо удаления просто откроется данный вопрос. -->
-  <!-- Для Рэилс 7 поменяем все data опции, добавив им префикс turbo_ -->
+  <!-- confirm: 'Are you sure?' - необязательный элемент c окном подтверждения -->
+  <!-- В Рэилс 7 если не отключить хотваир, то ссылка как выше уже не сработает, тк link_to delete-ссылки по умолчанию связаны с js и turbo и отключен UJS и ссылка шлет GET, с turbo нужно чтобы слало метод DELETE, потому вместо удаления просто откроется данный вопрос те show -->
+  <!-- Для Рэилс 7, чтобы все работало поменяем все data опции, добавив им префикс turbo_ -->
   <%= link_to "Destroy", article_path(article), data: {turbo_method: :delete, turbo_confirm: 'Действительно удалить?'} %>
-  <!-- Альтернативный вариант использовать хэлпер button_to вместо link_to -->
+  <!-- Альтернативный вариант использовать хэлпер button_to вместо link_to, но тогда будет тег кнопки а не ссылки -->
   <%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %>
-  <!-- button_to - для кнопки удаления вместо ссылки удаления link_to,  -->
 
     <!-- Ссылка выглядит так(не добавляет форму (?? в Рэилс 7 ??)): -->
       <a data-confirm="Действительно удалить?" rel="nofollow" data-method="delete" href="/articles/1">Destroy article</a>
