--- a/web/Rails/app/views/articles/new.html.erb
+++ b/web/Rails/app/views/articles/new.html.erb
@@ -4,9 +4,9 @@
 
 <!-- Синтаксис Рэилс для формы не обязателен и можно использовать обычный HTML, как в формах Синатры -->
 
-<%= form_for :article, url: articles_path, data: {turbo:false} do |f| %> <!-- Тут именно с %= -->
+<%= form_for :article, url: articles_path, data: {turbo: false} do |f| %> <!-- Тут именно с %= -->
   <!-- form_for - стандартный форм билдер(хэлпер), создает форму, используется не так часто тк есть другие форм билдеры -->
-  <!-- :article - параметр в единственном числе, тк форма отправляет данные об одной сущности -->
+  <!-- :article - параметр(? для генерации значения атрибута name ?) в единственном числе, тк форма отправляет данные об одной сущности -->
     <!-- В итоге если посмотреть код то будет создана форма и скрытое поле в ней(нужно для безопасности приложения): -->
     <form action="/articles/new" accept-charset="UTF-8" method="post">
       <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhYRgsnOmkAZGbJQ" autocomplete="off" />
