--- a/web/Rails/app/views/questions/_form.html.erb
+++ b/web/Rails/app/views/questions/_form.html.erb
@@ -1,15 +1,15 @@
-<!--                                   Эта же форма будет и в new и в edit -->
+<!--                                эта форма будет рендериться и в new и в edit -->
 
-<!-- Генерируем форму при помощи вспомогательной функции form_with -->
+<!-- Генерируем форму при помощи вспомогательной функции form_with. Начиная с новых версий(6?) рекомендуется использовать эту вспомогательную функцию для генерации формы -->
 <%= form_with model: @question do |f| %>
-  <!-- form_with - начиная с новых версий(6?) рекомендуется использовать эту вспомогательную функцию для генерации формы -->
-  <!-- model: @question  - используем экземпляр модели созданный в экшене new или edit, для new (тоесть новой пустой сущьеости в переменной) создаст URL post '/question', для edit (тоесть существующей сущьности) patch '/question/:id' -->
+  <!-- model: @question  - используем экземпляр модели созданный в экшене new или edit, для new (тоесть новой пустой сущьеости) создаст URL post '/question' (тоесть отправит в экшен create), для edit (тоесть существующей сущьности) patch '/question/:id' (тоесть, подставит action="/questions/1", айди для которого возьмет в объекте @question и отправит в экшен update) -->
   <!-- url: '/question' - можно и так харкодить URL вместо model: @question, но тогда придется создавать 2 формы -->
 
-  <!-- Формбилдер form_with с параметром model: @question, для представления edit подставит action="/questions/1", айди для которого возьмет в объекте @question -->
-  <!-- Для edit будет добавлено скрытое поле <input type="hidden" name="_method" value="patch" autocomplete="off" /> -->
+  <!-- Для edit будет добавлено скрытое поле: -->
+  <input type="hidden" name="_method" value="patch" autocomplete="off" />
 
   <!-- Для представления edit значения полей будут автоматически подставлены из @question -->
+  
   <div>
     <%= f.label :title %>
     <%= f.text_field :title, required: true, minlength: 2, placeholder: 'Title' %>
