--- a/web/Rails/app/views/questions/new.html.erb
+++ b/web/Rails/app/views/questions/new.html.erb
@@ -2,6 +2,11 @@
 
 <!-- Рендерим нашу фрму из фаила _form.html.erb -->
 <%= render 'form' %>
+<!-- render - используем для того чтоб подставить на эту позицию какуюто разметку из паршала -->
+<!-- 'form' - обозначает фаил _form.html.erb из которого будет взята разметка -->
+
+<!-- По умолчанию берет фаил из текущей дериктории, если хотим отрендерить из другой директории то пишем например  -->
+<%= render 'pages/form' %>
 
 
 
