--- a/web/Rails/app/views/layouts/application(helper).html.erb
+++ b/web/Rails/app/views/layouts/application(helper).html.erb
@@ -7,8 +7,8 @@
 
     <!--                      Хэлпер для названия вкладки с названием страницы -->
 
-    <!-- Интегрируем в тайтл значение возвращаемое хэлпером, с названием и сайта и конкретной страницы -->
-    <title><%= full_title(yield(:page_title)) %></title>
+    <!-- Вставляем в <title> значение возвращаемое хэлпером, с названием и сайта и конкретной страницы -->
+    <title><%= full_title( yield(:page_title) ) %></title>
     <!-- full_title - оператор нашего хэлпера -->
     <!-- yield(:page_title) - дополнительный, не главный yield, с условием(content_for) который принимает только из provide с тем же параметром -->
     <!-- :page_title - content_for/название(можно любое) для конкретного yield -->
