--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <!--                          Хэлпер для названия вкладки с названием страницы -->
 
-<!-- Эту конструкцию, но с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке -->
+<!-- Эту конструкцию, но с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке браузера -->
 <% provide :page_title, 'Questions' %>
 <!-- provide  - встроенный хэлпер передающий значение(тут 'Questions') для конкретного yield с именем :page_title -->
 
@@ -9,7 +9,7 @@
 <!--                      Кастомные хэлперы для динамического меню, переданного через yield -->
 
 <!-- Вызываем наш хэлпер, рендерищий меню и передающий имя страницы -->
-<!-- Придется его подключить на каждой странице, а иначе меню не будет отображаться, тк рендерится оно именно в хэлпере, а в yield :main_menu только передается.  -->
+<!-- Придется его подключить на каждой странице, а иначе меню не будет отображаться, тк рендерится оно именно в хэлпере, а в yield :main_menu только передается. -->
 <% currently_at 'Questions' %>
 <!-- 'Questions' - передаем параметром хэлпера название нашей страницы, которое должно быть идентично названию в ссылках с которых на эту страницу осуществляется переход -->
 
