--- a/web/Rails/app/views/articles/show.html.erb
+++ b/web/Rails/app/views/articles/show.html.erb
@@ -11,9 +11,7 @@
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), а нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется и лучше для генерации нужного URL использовать синтаксис из 2х компонентов связанных сущностей:  -->
 <%= form_for([@article, @comment]) do |f| %>
-<!-- но мы не создавали переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается это представление с формой -->
-
-<!-- Тк нет переменной @comment используем метод build прямо в форме -->
+<!-- но мы не создавали переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается это представление с формой,потому используем метод build прямо в форме -->
 <!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут со значением nil, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <!-- Теперь у нас есть нужный URL '/articles/:article_id/comments' в атрибуте action -->
