--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -70,7 +70,7 @@
 <% end %>
 
 
-<!-- Вариант 2: можно вынести в отдельный паршал формы в answers/_form.html.erb, причем поместить туда и фому и паршал ошибок. Что удобно тк эту форму вместе с паршалом ошибок можно использовать и в answers/edit.html.erb -->
+<!-- Вариант 2: можно вынести в отдельный паршал формы - answers/_form.html.erb, причем поместить туда и фому и паршал ошибок. Что удобно тк эту форму вместе с паршалом ошибок можно использовать и в answers/edit.html.erb -->
 <%= render 'answers/form' %>
 <!-- И просто рендерим паршал формы из другой директории сюда используя путь с директорией, тк тут директория questions -->
 
