--- a/web/Rails/app/views/answers/_answer.html.erb
+++ b/web/Rails/app/views/answers/_answer.html.erb
@@ -22,7 +22,7 @@
     </section>
 
     <%= link_to 'Edit', edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
-    <!-- question ставим вместо @question (только для варианта 2а) - тк теперь приваиваем вопрос через локальную переменную обявленную в опциях рендера на show.html.erb -->
+    <!-- question ставим вместо @question (только для варианта 2а) - тк теперь присваиваем вопрос через локальную переменную обявленную в опциях рендера на show.html.erb -->
     <%= link_to 'Delete', question_answer_path(question, answer), class: 'btn btn-danger btn-sm',
       data: {method: :delete, confirm: "Are you sure?"} %>
   </div>
