--- a/web/Rails/app/views/questions/_form.html.erb
+++ b/web/Rails/app/views/questions/_form.html.erb
@@ -9,7 +9,7 @@
   <input type="hidden" name="_method" value="patch" autocomplete="off" />
 
   <!-- Для представления edit значения полей будут автоматически подставлены из @question -->
-  
+
   <div>
     <%= f.label :title %>
     <%= f.text_field :title, required: true, minlength: 2, placeholder: 'Title' %>
@@ -29,10 +29,10 @@
     <!-- collection_select - хэлпер селектора, который может принимать коллекцию сущностей и подставлять ее свойства -->
     <!-- :tag_ids - название(name) поля (для params) -->
     <!-- tags - коллекция всех тегов которую сюда передаем из questions/new.html.erb или questions/edit.html.erb -->
-    <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
+    <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов селектора (передаются на сервер) -->
     <!-- :title - метод(модели) который нужно применять к сущности из коллекции tags при отображении лэйблов(названий тегов) на странице в пунктах селектора -->
     <!-- {} - пустые опции  -->
-    <!-- multiple: true - ставит атрибут multiple в селектор (выбор множества вариантов через контрл) -->
+    <!-- multiple: true - ставит атрибут multiple в селектор (выбор множества вариантов через Ctrl) -->
   </div>
   <!-- селектор(вариант 2) с ассинхронными запросами и поиском вместо списка при помощи blueprinter (ManyToMany) -->
   <div>
