--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -79,23 +79,23 @@
 
 
 
-<!--                      index.html.erb вариант 2, с выносом в паршал итерации вопросов  -->
+<!--                          Вариант 2: с выносом в паршал итерации вопросов и TomSelect  -->
 
 <% provide :page_title, t('.title') %>
 <% currently_at t('menu.questions') %>
 
 <h1 class="mb-4"><%= t('.title') %></h1>
 
-<!--            (ManyToMany) форма для выбора отображения вопросов по тегам  -->
+<!--                  (ManyToMany) Форма для выбора отображения вопросов по тегам  -->
 <%= form_with url: questions_path, method: :get do |f| %>
-  <!-- url: questions_path  - тоесть на эту же страницу -->
-  <!-- method: :get - тоесть передаем методом GET (будем отправлять форму в index) -->
+  <!-- url: questions_path  - тоесть на эту же страницу (будем отправлять форму в index) -->
+  <!-- method: :get - тоесть передаем методом GET -->
   <%= f.collection_select :tag_ids, (@tags || []), :id, :title, {selected: params[:tag_ids]},
     multiple: true, required: true, class: 'js-multiple-select', data: {'ajax-url': '/api/tags'} %>
     <!-- :tag_ids имя селесктора -->
     <!-- (@tags || []) либо коллекция тегов переданная из index либо пустая коллекция -->
     <!-- :id - метод(модели) который нужно применять к сущности из коллекции tags для значений элементов(передаются на сервер) селектора  -->
-    <!-- :title - заголовки тегов те их имена -->
+    <!-- :title - заголовки тегов те их имена (метод модели) -->
     <!-- {selected: params[:tag_ids]} - те когда эта форма будет отправлена и вернется страница то в селекторе уже будут выбраны все те варианты что мы собствено выбрали до отправки формы -->
     <!-- required: true - валидация запрещает отправку пустой формы -->
     <!-- data: {'ajax-url': '/api/tags'} - опции ассинхронного поиска где:
@@ -106,9 +106,7 @@
   <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
 <% end %>
 
-<%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
-
-<!-- Вариант той же кнопоки нового вопроса со скрытием для пользователей бнз соотв доступа (UsersRoles) -->
+<!-- Обернем в политику кнопоку нового вопроса для скрытия от пользователей без соотв доступа (UsersRoles) -->
 <% if policy(:question).new? %>
   <!-- :question - тк сущности вопроса тут еще нет, то передадим просто символ-название политики, в Pundit это тоже сработает -->
   <%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
