--- a/web/Rails/app/views/admin/users/_user.html.erb
+++ b/web/Rails/app/views/admin/users/_user.html.erb
@@ -1,7 +1,7 @@
 <!-- рендерится в  index.html.erb -->
 
 <tr>
-  <th scope="row"><%= user.id %></th>
+  <th><%= user.id %></th>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
   <td><%= user.created_at %></td>
@@ -11,7 +11,7 @@
 
 <!-- Вариант2: Добавим роль и кнопки для изменения роли (UsersRoles) -->
 <tr>
-  <th scope="row"><%= user.id %></th>
+  <th><%= user.id %></th>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
   <td><%= user.role %></td> <!-- Выведем роль -->
