--- a/web/Rails/app/views/admin/users/_form.html.erb
+++ b/web/Rails/app/views/admin/users/_form.html.erb
@@ -16,7 +16,7 @@
   <div> <!-- Селестор для выбора роли -->
     <%= f.label :role %>
     <%= f.select :role, user_roles, {}, class: 'form-select form-select-lg' %>
-    <!-- user_roles - хэлпер для рендера имен и значений ролей в селектор -->
+    <!-- user_roles - наш хэлпер для рендера имен и значений ролей в селектор -->
     <!--
       <option selected="selected" value="basic">Basic</option>
       <option value="moderator">Moderator</option>
@@ -34,7 +34,7 @@
     <%= f.password_field :password_confirmation, class: 'form-control form-control-lg' %>
   </div>
 
-  <% t_key = (user.new_record? ? "register" : "save") %> <!-- Оставим для будущей возможности регистрации новых юзеров админом -->
+  <% t_key = (user.new_record? ? "register" : "save") %> <!-- Оставим для будущей возможности создания новых юзеров админом по 1 -->
   <%= f.submit t(t_key, scope: 'users.global.forms'), class: 'btn btn-primary btn-lg' %>
 <% end %>
 
