--- a/web/Rails/app/views/admin/users/index.html.erb
+++ b/web/Rails/app/views/admin/users/index.html.erb
@@ -3,11 +3,25 @@
 
 <h1 class="mb-4">Admin Users</h1>
 
-<!-- ссылка/кнопка для работы с форматом zip. Выгрузит для пользователя(админа) данные(XLSX) в формате архива(zip) -->
+
+<!-- Ссылка/Кнопка для работы с форматом zip. Выгрузит для пользователя(админа) данные(XLSX) в формате архива(zip) -->
 <%= link_to 'Download zipped XLSX', admin_users_path(format: :zip),
   class: 'btn btn-secondary', data: {confirm: t('global.dialog.you_sure')} %>
 <!-- admin_users_path(format: :zip) - добавляем в хэлпер URL параметр format: :zip, это значит что к URL допишется .zip -->
 <!-- data: {confirm: t('global.dialog.you_sure')} - подтверждение нажатия кнопки -->
+
+
+<!-- Форма для загрузки фаила(zip архива) -->
+<h2 class="mb-3">Upload users from XLSX</h2>
+<%= form_with url: admin_users_path do |f| %> <!-- POST 'admin/users' те экшен admin/users#create -->
+  <div>
+    <%= f.label :archive, 'Select archive' %>
+    <%= f.file_field :archive, class: 'form-control' %>
+    <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
+  </div>
+  <%= f.submit 'Upload!', class: 'btn btn-primary' %>
+<% end %>
+
 
 <%= pagination @pagy %>
 
@@ -45,19 +59,6 @@
 
 <%= pagination @pagy %>
 
-
-<!-- Добавим форму для загрузки фаила(zip архива) -->
-<h2 class="mb-3">Upload users from XLSX</h2>
-
-<%= form_with url: admin_users_path do |f| %> <!-- POST 'admin/users' те экшен admin/users#create -->
-  <div>
-    <%= f.label :archive, 'Select archive' %>
-    <%= f.file_field :archive, class: 'form-control' %>
-    <!-- file_field - хэлпер генерирует поле для загрузки фаила -->
-  </div>
-
-  <%= f.submit 'Upload!', class: 'btn btn-primary' %>
-<% end %>
 
 
 
